--- a/wp-marmite-ios/archive.html
+++ b/wp-marmite-ios/archive.html
@@ -1,6 +1,6 @@
 <div id="content" class="container content full list-template">
 
-		<div id="list-title" class="list-title"><div><%= list_title %></div></div>
+    <div id="list-title" class="list-title"><%= list_title %></div>
 
 	<% if(posts.length){ %>
 
