Icon states management
Add TemplateTags.getMenuItems support and icon states management.

--- a/wpak-tabs-ios/layout.html
+++ b/wpak-tabs-ios/layout.html
@@ -1,4 +1,4 @@
-<div id="header" class="row header full">
+<div id="header" class="row header">
 
     <div id="back-button" class="back-button" style="display:none;"></div>
 
@@ -7,7 +7,7 @@
 
 </div>
 
-<div id="refresh-message" class="message">message</div>
+<div id="refresh-message" class="message"></div>
     
 <%= content %>
 
