--- a/bootstrap/layout.html
+++ b/bootstrap/layout.html
@@ -9,7 +9,7 @@
 		    </button>
 		    <span class="navbar-brand refresh-button-wrapper">
 		     	<a href="#" id="refresh-button" class="navbar-brand"><span class="glyphicon glyphicon-refresh"></span></a>
-		     	<a href="#" id="go-back" class="navbar-brand" style="display:none"><span class="glyphicon glyphicon-backward"></span></a>
+		     	<a href="#" id="go-back" class="navbar-brand" style="display:none"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		    </span>
 		    <span class="navbar-brand"><a href="#"><%= app_title %></a></span>
 		</div>
