Bootstrap theme : add login form

--- a/bootstrap/layout.html
+++ b/bootstrap/layout.html
@@ -18,6 +18,7 @@
 		</div>
 	</nav>
 	<div id="feedback" style="display:none"></div>
+        <div class="clearfix"><div class="clearfix pull-right" id="user-info"></div></div>
 	<%= content %>
 </div>
 <div id="waiting" style="display:none"></div>
