--- a/bootstrap/comments.html
+++ b/bootstrap/comments.html
@@ -1,19 +1,27 @@
 <div id="post-comments-list">
-	<ol class="breadcrumb">
-		<li>Comments on <a href="<%= TemplateTags.getPostLink(post.id) %>"><%= post.title %></a></li>
-	</ol>
-	<% if(comments.length){ %>
-		  <ul class="media-list">
-		  	<% _.each( comments, function( comment ){ %>
-				<li class="media" style="padding-left:<% print((comment.depth)*2) %>em">
-					<div class="media-body">
-						<h4 class="media-heading"><%= comment.author %>&nbsp;<small> <%= TemplateTags.formatDate(comment.date,'d/m/Y') %></small></h4>
-						<p><%= comment.content %></p>
-					</div>
-				</li>
-			<% }) %>
-		  </ul>
-	<% }else{ %>
-		<p>No comment!</p>
-	<% } %>
+    <ol class="breadcrumb">
+        <li>Comments on <a href="<%= TemplateTags.getPostLink(post.id) %>"><%= post.title %></a></li>
+    </ol>
+    <% if(comments.length){ %>
+        <ul class="media-list">
+            <% _.each( comments, function( comment ){ %>
+                <li class="media" style="padding-left:<% print((comment.depth)*2) %>em">
+                    <div class="media-body">
+                        <h4 class="media-heading"><%= comment.author %>&nbsp;<small> <%= TemplateTags.formatDate(comment.date,'d/m/Y') %></small></h4>
+                        <p><%= comment.content %></p>
+                    </div>
+                </li>
+            <% }) %>
+        </ul>
+    <% }else{ %>
+            <p>No comment!</p>
+    <% } %>
+    <form id="comment-form">
+        <div class="form-group">
+            <label for="comment-content">Add a comment :</label> 
+            <textarea name="content" cols="45" rows="8" class="form-control" ></textarea>
+        </div>
+        <input type="hidden" name="post" value="<%= post.id %>" >
+        <button type="submit" class="btn btn-info pull-right">Submit comment</button>
+    </form>
 </div>
