Search page example with search input in archive.html and search item added to menu

--- a/menu.html
+++ b/menu.html
@@ -4,4 +4,5 @@
 			<li><a href="<%= menu_item.link %>"><%= menu_item.label %> <span class="glyphicon glyphicon-chevron-right pull-right visible-xs"></span></a></li>
 		<% }) %>
 	<% } %>
+        <li><a href="#wpak-search">Search <span class="glyphicon glyphicon-chevron-right pull-right visible-xs"></span></a></li>
 </ul>
