--- a/archive.html
+++ b/archive.html
@@ -3,6 +3,10 @@
 	<ol class="breadcrumb">
 		<li><%= list_title %><% total > 0 ? print(' - ' + total) : print(' - No') %> post<% total > 1 ? print('s') : '' %></li>
 	</ol>
+    
+        <% if( WpakSearch.isSearchScreen() ){ %>
+        <input type="text" value="<%= WpakSearch.getSearchString() %>" id="search-input" > <a href="#" id="search-go">GO</a>
+        <% } %>
 	
 	<% if(posts.length){ %>
 	
