Add Photoswipe feature

--- a/head.html
+++ b/head.html
@@ -4,3 +4,8 @@
 <link rel="stylesheet" href="<%= TemplateTags.getThemeAssetUrl('css/bootstrap.min.css') %>">
 <link rel="stylesheet" href="<%= TemplateTags.getThemeAssetUrl('css/bootstrap-theme.min.css') %>">
 <link rel="stylesheet" href="<%= TemplateTags.getThemeAssetUrl('css/styles.css') %>" media="all"/>
+
+<!-- PhotoSwipe Core CSS file -->
+<link rel="stylesheet" href="<%= TemplateTags.getThemeAssetUrl('photoswipe/photoswipe.css') %>">
+<!-- PhotoSwipe Default UI Skin CSS file (styling of UI - buttons, caption, etc.) -->
+<link rel="stylesheet" href="<%= TemplateTags.getThemeAssetUrl('photoswipe/default-skin/default-skin.css') %>">
